aula 01 a 06 do curso de JS

--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -51,10 +51,12 @@
     <h3>function</h3>
     <p>será visto mais para frente</p>
     <script>
+        var nome = window.prompt('qual é o seu nome?')
+        window.alert('é um grande prazer em te conhecer, ' + nome  +'!')
         //isso é um comentário
         /*window.alert('minha primeira mensagem!')
         window.confirm('está gostando de JS?')
-        window.prompt('qual é o seu nome?')*/
+        */
         /*isso também 
         é um comentário*/
     </script>
