resolucao do exercícios

--- a/exercicio/ex14/index.html
+++ b/exercicio/ex14/index.html
@@ -6,9 +6,9 @@
     <title>hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>hora do dia</h1>
     </header>
     <section>
         <div id="msg">
