--- a/exercicio/modelo/index.html
+++ b/exercicio/modelo/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hora do dia</title>
+    <title>Verificador de idade</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Verificador de idade</h1>
     </header>
     <section>
-        <div>
-            testando
+        <div id="form">
+            <p>ano de nascimento: <input type="number" name="txtano" id="txtano" min="0"></p>
+            <p>sexo: 
+                <input type="radio" name="radsex" id="mas" checked>
+                <label for="mas">masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">feminino</label>
+            </p>
+            <p><input type="button" value="verificar" onclick="verificar()"></p>
         </div>
-        <div>
-            Olá
+        <div id="res">
+            preencha os dados acima para ver o resultado
         </div>
     </section>
     <footer>
